--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,56 @@
 }
 
 body {
-  font-size: 1.6rem;
+  font-size: 2rem;
 }
 
 h1 {
   font-size: 3.6rem;
+}
+
+p {
+  position: relative;
+}
+
+input,
+button,
+[type=checkbox] + label::before {
+  border: 2px solid #888;
+  border-radius: .5rem;
+  font-size: inherit;
+  padding: .5rem;
+}
+
+button {
+  border: transparent;
+  background: navy;
+  color: white;
+  padding-inline: 1rem;
+}
+
+input[type=checkbox] {
+  position: absolute;
+  inset-inline-start: -9999rem;
+}
+
+input[type=checkbox] + label {
+  display: inline-grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  gap: 1rem;
+}
+
+input[type=checkbox] + label::before {
+  content: '\00a0';
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  inline-size: 2.5rem;
+  block-size: 2.5rem;
+  line-height: 1;
+}
+
+input[type=checkbox]:checked + label::before {
+  content: '✔︎';
+  border-radius: .5rem;
 }
