--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,15 @@
 :root {
   box-sizing: border-box;
   font: normal 10px / 1.5 sans-serif;
+
+  --control-lightness: 25%;
+  --control-lightness-focus: 40%;
+  --background: white;
 }
 
 * {
   box-sizing: inherit;
-  
+
   &::after,
   &::before {
     box-sizing: inherit;
@@ -14,6 +18,7 @@
 
 body {
   font-size: 2rem;
+  background: var(--background);
 }
 
 h1 {
@@ -21,7 +26,12 @@ h1 {
 }
 
 p {
+  align-items: center;
+  display: flex;
   position: relative;
+  border: .5rem solid var(--background);
+  border-radius: .5rem;
+  gap: .5rem;
 }
 
 input,
@@ -33,39 +43,48 @@ button,
   padding: .5rem;
 }
 
+p:focus-within {
+  outline: 2px dotted black;
+}
+
 button {
-  border: transparent;
-  background: navy;
+  border: 0.3rem var(--background) solid;
+  background: hsl(240, 100%, var(--control-lightness));
   color: white;
   font-size: 2.4rem;
   padding: 1rem 2rem;
+
+  &:focus {
+    background: hsl(240, 100%, var(--control-lightness-focus));
+    outline: 2px dotted black;
+  }
 }
 
 [type=checkbox] {
   position: absolute;
   inset-inline-start: -9999rem;
-}
 
-[type=checkbox] + label {
-  display: inline-grid;
-  grid-template-columns: auto auto;
-  align-items: center;
-  gap: 1rem;
-}
+  & + label {
+    display: inline-grid;
+    grid-template-columns: auto auto;
+    align-items: center;
+    gap: 1rem;
+  }
 
-[type=checkbox] + label::before {
-  content: '\00a0';
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  inline-size: 2.5rem;
-  block-size: 2.5rem;
-  line-height: 1;
-}
+  & + label::before {
+    content: '\00a0';
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    inline-size: 2.5rem;
+    block-size: 2.5rem;
+    line-height: 1;
+  }
 
-[type=checkbox]:checked + label::before {
-  content: '✔︎';
-  border-radius: .5rem;
+  &:checked + label::before {
+    content: '✔︎';
+    border-radius: .5rem;
+  }
 }
 
 [type=text], [type=number] {
